--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Labb 2 - Grupp 12</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
