--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Uppgift 5 - Del 1-->
     <title>Labb 2 - Grupp 12</title>
+    <!--Uppgift 5 - Del 2-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <!--Uppgift 5 - Del 3-->
     <script src="script.js"></script>
 </body>
 </html>
