upg 6 & 7, start av css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>Labb 2 - Grupp 12</title>
     <!--Uppgift 5 - Del 2-->
     <link rel="stylesheet" href="styles.css">
+    <favicon></favicon>
 </head>
 <body>
+    <container>
+        <h3 class="title group">Grupp 12</h3>
+        <h1 class="title info">Labb 2, API-kommunikation</h1>
+        <section class="infoSection">
+            <div id="divBox"></div>
+        </section>
+    </container>
     <!--Uppgift 5 - Del 3-->
     <script src="script.js"></script>
 </body>
