--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <container>
         <h3 class="title group">Grupp 12</h3>
         <h1 class="title info">Labb 2, API-kommunikation</h1>
-        <section class="infoSection">
+        <section class="infoSection" id="infoSection">
             <div id="divBox"></div>
         </section>
     </container>
