--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <container>
         <h3 class="title group">Grupp 12</h3>
         <h1 class="title info">Labb 2, API-kommunikation</h1>
-        <section class="infoSection" id="infoSection">
-        </section>
+        <section class="infoSection" id="infoSection"></section>
     </container>
     <!--Uppgift 5 - Del 3-->
     <script src="script.js"></script>
