--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>Labb 2 - Grupp 12</title>
     <!--Uppgift 5 - Del 2-->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
